add image reference

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </header>
         <div class="content">
           <span class="image fill" data-position="center"
-            ><img src="images/pic01.jpg" alt=""
+            ><img src="images/cat-unicorn.jpg" alt=""
           /></span>
         </div>
       </section>
