content and style updates

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Paradigm Shift by HTML5 UP</title>
+    <title>Brandon's Community Walk</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -22,11 +22,11 @@
       <!-- Intro -->
       <section class="intro">
         <header>
-          <h1>Brandon's Walk for Mental Health Awareness</h1>
+          <h1>Brandon's Community Walk</h1>
           <p>
-            A free responsive site template designed by
-            <a href="https://twitter.com/ajlkn">@ajlkn</a> /
-            <a href="https://html5up.net">HTML5 UP</a>
+            Bringing awareness to mental health care
+            <!-- <a href="https://twitter.com/ajlkn">@ajlkn</a> /
+            <a href="https://html5up.net">HTML5 UP</a> -->
           </p>
           <ul class="actions">
             <li>
@@ -46,26 +46,30 @@
       <!-- Section -->
       <section id="first">
         <header>
-          <h2>Magna sed nullam nisl adipiscing</h2>
+          <h2>Brandon's passion for helping others</h2>
         </header>
         <div class="content">
           <p>
-            <strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing
-            elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad
-            litora torquent per conubia nostra, per inceptos himenaeos. Etiam
-            tristique libero eu nibh porttitor amet fermentum. Nullam venenatis
-            erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam
-            consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et
-            dolor libero, feugiat magna tempus, sed et lorem adipiscing.
+            <strong>Brandon was always</strong> driven by a deep passion to help
+            others. His dedication was evident in every action he took, whether
+            volunteering at local shelters, mentoring at-risk youth, or
+            organizing community clean-ups. He strongly believed in the power of
+            community and the importance of giving back. His genuine concern for
+            the well-being of others inspired those around him, making him a
+            respected and cherished figure in his community. Brandon’s
+            selflessness and commitment to making a difference truly defined
+            him.
           </p>
-          <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+          <span class="image main"
+            ><img src="images/brando-young.jpg" alt=""
+          /></span>
         </div>
       </section>
 
       <!-- Section -->
       <section>
         <header>
-          <h2>Feugiat consequat tempus ultrices</h2>
+          <h2>Why a walk?</h2>
         </header>
         <div class="content">
           <p>
