--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-	Paradigm Shift by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
   <head>
     <title>Brandon's Community Walk</title>
@@ -14,7 +9,7 @@
     />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/sass/main.css" />
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
@@ -135,85 +130,85 @@
           </p> -->
 
       <!-- Section -->
-      <!-- <section>
-            <header>
-              <h3>Erat aliquam</h3>
-              <p>
-                Vehicula ultrices dolor amet ultricies et condimentum. Magna sed
-                etiam consequat, et lorem adipiscing sed dolor sit amet,
-                consectetur amet do eiusmod tempor incididunt ipsum suspendisse
-                ultrices gravida.
-              </p>
-            </header>
-            <div class="content">
-              <div class="gallery">
-                <a href="images/gallery/fulls/01.jpg" class="landscape"
-                  ><img src="images/gallery/thumbs/01.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/02.jpg"
-                  ><img src="images/gallery/thumbs/02.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/03.jpg"
-                  ><img src="images/gallery/thumbs/03.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/04.jpg" class="landscape"
-                  ><img src="images/gallery/thumbs/04.jpg" alt=""
-                /></a>
-              </div>
-            </div>
-          </section> -->
+      <section>
+        <header>
+          <h3>Erat aliquam</h3>
+          <p>
+            Vehicula ultrices dolor amet ultricies et condimentum. Magna sed
+            etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur
+            amet do eiusmod tempor incididunt ipsum suspendisse ultrices
+            gravida.
+          </p>
+        </header>
+        <div class="content">
+          <div class="gallery">
+            <a href="images/gallery/fulls/01.jpg" class="landscape"
+              ><img src="images/gallery/thumbs/01.jpg" alt=""
+            /></a>
+            <a href="images/gallery/fulls/02.jpg"
+              ><img src="images/gallery/thumbs/02.jpg" alt=""
+            /></a>
+            <a href="images/gallery/fulls/03.jpg"
+              ><img src="images/gallery/thumbs/03.jpg" alt=""
+            /></a>
+            <a href="images/gallery/fulls/04.jpg" class="landscape"
+              ><img src="images/gallery/thumbs/04.jpg" alt=""
+            /></a>
+          </div>
+        </div>
+      </section>
 
       <!-- Section -->
-      <!-- <section>
-            <header>
-              <h3>Nisl consequat</h3>
-              <p>
-                Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin
-                aliquam sed facilisis ante interdum congue. Integer mollis, nisl
-                amet convallis, porttitor magna ullamcorper, amet mauris. Ut
-                magna finibus nisi nec lacinia ipsum maximus.
-              </p>
-            </header>
-            <div class="content">
-              <div class="gallery">
-                <a href="images/gallery/fulls/05.jpg" class="landscape"
-                  ><img src="images/gallery/thumbs/05.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/06.jpg"
-                  ><img src="images/gallery/thumbs/06.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/07.jpg"
-                  ><img src="images/gallery/thumbs/07.jpg" alt=""
-                /></a>
-              </div>
-            </div>
-          </section> -->
+      <section>
+        <header>
+          <h3>Nisl consequat</h3>
+          <p>
+            Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin
+            aliquam sed facilisis ante interdum congue. Integer mollis, nisl
+            amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna
+            finibus nisi nec lacinia ipsum maximus.
+          </p>
+        </header>
+        <div class="content">
+          <div class="gallery">
+            <a href="images/gallery/fulls/05.jpg" class="landscape"
+              ><img src="images/gallery/thumbs/05.jpg" alt=""
+            /></a>
+            <a href="images/gallery/fulls/06.jpg"
+              ><img src="images/gallery/thumbs/06.jpg" alt=""
+            /></a>
+            <a href="images/gallery/fulls/07.jpg"
+              ><img src="images/gallery/thumbs/07.jpg" alt=""
+            /></a>
+          </div>
+        </div>
+      </section>
 
       <!-- Section -->
-      <!-- <section>
-            <header>
-              <h3>Lorem gravida</h3>
-              <p>
-                Proin aliquam facilisis ante interdum. Sed nulla amet lorem
-                feugiat tempus aenean ornare velit lacus, ac varius sed enim
-                lorem ullamcorper dolore. ac varius enim lorem ullamcorper
-                dolore. Proin aliquam facilisis.
-              </p>
-            </header>
-            <div class="content">
-              <div class="gallery">
-                <a href="images/gallery/fulls/08.jpg" class="portrait"
-                  ><img src="images/gallery/thumbs/08.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/09.jpg" class="portrait"
-                  ><img src="images/gallery/thumbs/09.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/10.jpg" class="landscape"
-                  ><img src="images/gallery/thumbs/10.jpg" alt=""
-                /></a>
-              </div>
-            </div>
-          </section> -->
+      <section>
+        <header>
+          <h3>Lorem gravida</h3>
+          <p>
+            Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat
+            tempus aenean ornare velit lacus, ac varius sed enim lorem
+            ullamcorper dolore. ac varius enim lorem ullamcorper dolore. Proin
+            aliquam facilisis.
+          </p>
+        </header>
+        <div class="content">
+          <div class="gallery">
+            <a href="images/gallery/fulls/08.jpg" class="portrait"
+              ><img src="images/gallery/thumbs/08.jpg" alt=""
+            /></a>
+            <a href="images/gallery/fulls/09.jpg" class="portrait"
+              ><img src="images/gallery/thumbs/09.jpg" alt=""
+            /></a>
+            <a href="images/gallery/fulls/10.jpg" class="landscape"
+              ><img src="images/gallery/thumbs/10.jpg" alt=""
+            /></a>
+          </div>
+        </div>
+      </section>
       <!-- </div> -->
       <!-- </section> -->
 
@@ -237,7 +232,7 @@
 
       <!-- Elements -->
 
-      <!-- <section>
+      <section>
         <header>
           <h2>Elements</h2>
         </header>
@@ -561,7 +556,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
             </div>
           </section>
         </div>
-      </section> -->
+      </section>
 
       <!-- Section -->
       <section>
@@ -625,21 +620,23 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
           <ul class="items">
             <li>
               <h3>Email</h3>
-              <a href="#">information@untitled.ext</a>
+              <a href="#">dontforgetmewalk@gmail.com</a>
             </li>
-            <li>
+            <!-- <li>
               <h3>Phone</h3>
               <a href="#">(000) 000-0000</a>
             </li>
             <li>
               <h3>Address</h3>
               <span>1234 Somewhere Road, Nashville, TN 00000</span>
-            </li>
+            </li> -->
             <li>
               <h3>Elsewhere</h3>
               <ul class="icons">
                 <li>
-                  <a href="#" class="icon brands fa-facebook-f"
+                  <a
+                    href="https://www.facebook.com/profile.php?id=61558581898459&mibextid=ZbWKwL"
+                    class="icon brands fa-facebook-f"
                     ><span class="label">Facebook</span></a
                   >
                 </li>
@@ -656,12 +653,6 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
           </ul>
         </footer>
       </section>
-
-      <!-- Copyright -->
-      <div class="copyright">
-        &copy; Untitled. All rights reserved. Design:
-        <a href="https://html5up.net">HTML5 UP</a>.
-      </div>
     </div>
 
     <!-- Scripts -->
