lots of cleanup, add sponsor page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Brandon's Community Walk</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -18,21 +19,21 @@
       <section class="intro">
         <header>
           <h1>Brandon's Community Walk</h1>
-          <p>Bringing awareness to mental health care</p>
+          <p style="font-weight: bold">
+            Bringing awareness to mental health care
+          </p>
           <ul class="actions">
             <li>
               <a
                 href="#first"
-                class="button primary large icon solid fa-walking scrolly"
-                style="background-color: #ffffff !important"
+                class="button large icon solid fa-walking scrolly"
                 >Info</a
               >
             </li>
             <li>
               <a
                 href="#first"
-                class="button primary large icon solid fa-pen-alt scrolly"
-                style="background-color: #ffffff !important"
+                class="button large icon solid fa-pen-alt scrolly"
                 >Register</a
               >
             </li>
@@ -40,17 +41,15 @@
           <ul class="actions">
             <li>
               <a
-                href="#first"
-                class="button primary large icon solid fa-hand-holding-heart scrolly"
-                style="background-color: #ffffff !important"
+                href="/sponsorships"
+                class="button large icon solid fa-hand-holding-heart scrolly"
                 >Sponsor</a
               >
             </li>
             <li>
               <a
                 href="#first"
-                class="button primary large icon solid fa-hands-helping scrolly"
-                style="background-color: #ffffff !important"
+                class="button large icon solid fa-hands-helping scrolly"
                 >Volunteer</a
               >
             </li>
@@ -71,10 +70,18 @@
         <div class="content">
           <h3 style="color: #000000">May 19, 2024</h3>
           <p>
-            <strong>Holland Momentum Center</strong><br />
+            <strong>The Momentum Center Holland</strong>
+            <br />
             345 West 14th Street<br />
-            Holland, MI 49423<br /><br />
-            <strong>Registration Fee: </strong> $10 <br /><br />
+            Holland, MI 49423<br />
+            <a
+              href="https://www.google.com/maps/place/The+Momentum+Center+Holland/@42.7850413,-86.1261302,17z/data=!3m1!4b1!4m6!3m5!1s0x8819f30455ae326b:0x729c609f72508a53!8m2!3d42.7850374!4d-86.1235553!16s%2Fg%2F11v4mzhg4d?entry=ttu"
+              target="_blank"
+              class="button icon solid fa-map-marker-alt"
+              >Map</a
+            ><br /><br />
+            <strong>Registration Fee: </strong> Adults - $20, 12 & under - $10
+            <br /><br />
             <strong>Registration: </strong> 12-2pm<br />
             <strong>Walk: </strong>2-4pm
           </p>
@@ -102,14 +109,6 @@
             fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies
             condimentum.
           </p>
-          <ul class="feature-icons">
-            <li class="icon solid fa-laptop">Consequat tempus</li>
-            <li class="icon solid fa-bolt">Etiam adipiscing</li>
-            <li class="icon solid fa-signal">Libero nullam</li>
-            <li class="icon solid fa-cog">Blandit condimentum</li>
-            <li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-            <li class="icon solid fa-code">Nibh amet venenatis</li>
-          </ul>
           <p>
             Vehicula ultrices sed ultricies condimentum. Magna sed etiam
             consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et
@@ -117,29 +116,8 @@
           </p>
         </div>
       </section>
-
-      <!-- Section -->
-      <!-- <section> -->
-      <!-- <header>
-          <h2>Ultrices erat magna sed condimentum</h2>
-        </header>
-        <div class="content">
-          <p>
-            <strong>Integer mollis egestas</strong> nam maximus erat id euismod
-            egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.
-          </p> -->
-
-      <!-- Section -->
-      <section>
-        <header>
-          <h3>Erat aliquam</h3>
-          <p>
-            Vehicula ultrices dolor amet ultricies et condimentum. Magna sed
-            etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur
-            amet do eiusmod tempor incididunt ipsum suspendisse ultrices
-            gravida.
-          </p>
-        </header>
+      <section style="margin-top: 0">
+        <header></header>
         <div class="content">
           <div class="gallery">
             <a href="images/gallery/fulls/01.jpg" class="landscape"
@@ -154,23 +132,6 @@
             <a href="images/gallery/fulls/04.jpg" class="landscape"
               ><img src="images/gallery/thumbs/04.jpg" alt=""
             /></a>
-          </div>
-        </div>
-      </section>
-
-      <!-- Section -->
-      <section>
-        <header>
-          <h3>Nisl consequat</h3>
-          <p>
-            Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin
-            aliquam sed facilisis ante interdum congue. Integer mollis, nisl
-            amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna
-            finibus nisi nec lacinia ipsum maximus.
-          </p>
-        </header>
-        <div class="content">
-          <div class="gallery">
             <a href="images/gallery/fulls/05.jpg" class="landscape"
               ><img src="images/gallery/thumbs/05.jpg" alt=""
             /></a>
@@ -180,23 +141,6 @@
             <a href="images/gallery/fulls/07.jpg"
               ><img src="images/gallery/thumbs/07.jpg" alt=""
             /></a>
-          </div>
-        </div>
-      </section>
-
-      <!-- Section -->
-      <section>
-        <header>
-          <h3>Lorem gravida</h3>
-          <p>
-            Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat
-            tempus aenean ornare velit lacus, ac varius sed enim lorem
-            ullamcorper dolore. ac varius enim lorem ullamcorper dolore. Proin
-            aliquam facilisis.
-          </p>
-        </header>
-        <div class="content">
-          <div class="gallery">
             <a href="images/gallery/fulls/08.jpg" class="portrait"
               ><img src="images/gallery/thumbs/08.jpg" alt=""
             /></a>
@@ -209,35 +153,15 @@
           </div>
         </div>
       </section>
-      <!-- </div> -->
-      <!-- </section> -->
-
-      <!-- Section -->
-      <!-- <section>
-        <header>
-          <h2>Duis sed adpiscing veroeros amet</h2>
-        </header>
-        <div class="content">
-          <p>
-            <strong>Proin tempus feugiat</strong> sed varius enim lorem
-            ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim
-            lorem ullamcorper dolore.
-          </p>
-          <ul class="actions">
-            <li><a href="#" class="button primary large">Get Started</a></li>
-            <li><a href="#" class="button large">Learn More</a></li>
-          </ul>
-        </div>
-      </section> -->
 
       <!-- Elements -->
-
+      <!-- 
       <section>
         <header>
           <h2>Elements</h2>
         </header>
-        <div class="content">
-          <section>
+        <div class="content"> -->
+      <!-- <section>
             <header>
               <h3>Text</h3>
             </header>
@@ -470,9 +394,9 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
                 <li><span class="button disabled">Disabled</span></li>
               </ul>
             </div>
-          </section>
+          </section> -->
 
-          <section>
+      <!-- <section>
             <header>
               <h3>Form</h3>
             </header>
@@ -554,9 +478,9 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
                 </ul>
               </form>
             </div>
-          </section>
-        </div>
-      </section>
+          </section> -->
+      <!-- </div>
+      </section> -->
 
       <!-- Section -->
       <section>
@@ -565,16 +489,26 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
         </header>
         <div class="content">
           <p>
-            <strong>Auctor commodo</strong> interdum et malesuada fames ac ante
-            ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet
-            dolor mattis sagittis.
+            <strong>Want to know more?</strong> <br />Please reach out if you
+            have any questions!
           </p>
-          <form method="post" action="https://api.web3forms.com/submit">
+          <form
+            method="post"
+            action="https://formsubmit.co/f6f622a180ca202ca47b03cff6e392ac"
+          >
+            <input type="hidden" name="_template" value="table" />
             <input
               type="hidden"
-              name="access_key"
-              value="79e4e998-9fd6-407e-9617-9305d39e928c"
+              name="_next"
+              value="https://dontforgetme.care"
             />
+            <input type="hidden" name="_subject" value="New Contact Form!" />
+            <input
+              type="hidden"
+              name="_cc"
+              value="chamm@bizstream.com,dontforgetmewalk@gmail.com"
+            />
+            <input type="text" name="_honey" style="display: none" />
             <div class="fields">
               <div class="field half">
                 <input type="text" name="name" id="name" placeholder="Name" />
@@ -596,10 +530,6 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
                 ></textarea>
               </div>
             </div>
-            <div class="field">
-              <!-- hCaptcha Spam Protection -->
-              <div class="h-captcha" data-captcha="true"></div>
-            </div>
             <ul class="actions">
               <li>
                 <input
@@ -610,26 +540,15 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
               </li>
             </ul>
           </form>
-          <script
-            src="https://web3forms.com/client/script.js"
-            async
-            defer
-          ></script>
         </div>
         <footer>
           <ul class="items">
             <li>
               <h3>Email</h3>
-              <a href="#">dontforgetmewalk@gmail.com</a>
+              <a href="mailto:dontforgetmewalk@gmail.com"
+                >dontforgetmewalk@gmail.com</a
+              >
             </li>
-            <!-- <li>
-              <h3>Phone</h3>
-              <a href="#">(000) 000-0000</a>
-            </li>
-            <li>
-              <h3>Address</h3>
-              <span>1234 Somewhere Road, Nashville, TN 00000</span>
-            </li> -->
             <li>
               <h3>Elsewhere</h3>
               <ul class="icons">
