--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             </li>
             <li>
               <a
-                href="#first"
-                class="button large icon solid fa-pen-alt scrolly"
+                href="https://eventbrite.com"
+                class="button large icon solid fa-pen-alt"
+                target="_blank"
                 >Register</a
               >
             </li>
@@ -42,15 +43,25 @@
             <li>
               <a
                 href="/sponsorships"
-                class="button large icon solid fa-hand-holding-heart scrolly"
+                class="button large icon solid fa-hand-holding-heart"
                 >Sponsor</a
               >
             </li>
             <li>
               <a
-                href="#first"
-                class="button large icon solid fa-hands-helping scrolly"
+                href="https://www.signupgenius.com"
+                class="button large icon solid fa-hands-helping"
+                target="_blank"
                 >Volunteer</a
+              >
+            </li>
+          </ul>
+          <ul class="actions">
+            <li>
+              <a
+                href="#contact"
+                class="button large icon solid fa-envelope scrolly"
+                >Contact Us</a
               >
             </li>
           </ul>
@@ -65,7 +76,14 @@
       <!-- Section -->
       <section id="first">
         <header>
-          <h2>Be part of the community</h2>
+          <h2 style="margin-bottom: 20px">Be part of the community</h2>
+          <ul class="actions">
+            <li>
+              <a href="#second" class="arrow scrolly"
+                ><span class="label">Next</span></a
+              >
+            </li>
+          </ul>
         </header>
         <div class="content">
           <h3 style="color: #000000">May 19, 2024</h3>
@@ -99,20 +117,18 @@
       </section>
 
       <!-- Section -->
-      <section>
+      <section id="second">
         <header>
-          <h2>Why a walk?</h2>
+          <h2>Why this event?</h2>
         </header>
         <div class="content">
           <p>
-            <strong>Etiam tristique libero</strong> eu nibh porttitor amet
-            fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies
-            condimentum.
-          </p>
-          <p>
-            Vehicula ultrices sed ultricies condimentum. Magna sed etiam
-            consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et
-            dolor libero, feugiat magna tempus, sed et lorem adipiscing.
+            <strong>Before my husband Brandon passed away</strong>, I promised
+            to continue his dreams. One thing he really wanted was to make a
+            difference in the world. To honor him and keep my promise, I
+            organized Brandon's Community Walk, a 5K event all about raising
+            awareness for mental health. Our aim with this event is to shine a
+            light on mental health issues and support those who need it.
           </p>
         </div>
       </section>
@@ -483,7 +499,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
       </section> -->
 
       <!-- Section -->
-      <section>
+      <section id="contact">
         <header>
           <h2>Get in touch</h2>
         </header>
