add images, update sponsors page

--- a/sponsorships.html
+++ b/sponsorships.html
@@ -43,7 +43,37 @@
           <h2>Why sponsor?</h2>
         </header>
         <div class="content">
-          <h3>69 on the back porch</h3>
+          <p>
+            <strong>Mental health care is essential</strong> as it influences
+            our capacity to manage stress, interact with others, and make
+            choices in life. By championing mental health awareness, we can
+            dismantle the barriers of stigma, encouraging more people to seek
+            support openly. Supporting this cause not only enhances access to
+            crucial mental health services through better funding but also
+            fosters a healthier community overall.
+          </p>
+          <p>
+            Your sponsorship of our mental health awareness event will help
+            educate the public, leading to early intervention and reducing the
+            long-term impacts of mental disorders. This is an opportunity to
+            make a profound difference in countless lives.
+          </p>
+          <ul class="feature-icons mb-0">
+            <li class="icon solid fa-ribbon">
+              <h3>Gold: $200 and under</h3>
+              <ul class="mb-0">
+                <li class="pl-0 w-100">Logo on event t-shirt</li>
+              </ul>
+            </li>
+            <li class="icon solid fa-hand-holding-heart">
+              <h3>Platinum: over $200</h3>
+              <ul class="mb-0">
+                <li class="pl-0 w-100">Logo on event t-shirt</li>
+                <li class="pl-0 w-100">Logo on course signage</li>
+                <li class="pl-0 mt-0 w-100">Social media shoutout</li>
+              </ul>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -53,8 +83,8 @@
         </header>
         <div class="content">
           <p>
-            <strong>Want to know more?</strong> <br />Please reach out if you
-            have any questions!
+            <strong>Ready to help?</strong> <br />Please fill out the form below
+            and we will be in touch!
           </p>
           <form
             method="post"
