metadata and event links

--- a/index.html
+++ b/index.html
@@ -8,8 +8,39 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <!-- General Metadata -->
+    <meta name="title" content="Brandon's Community Walk" />
+    <meta
+      name="description"
+      content="Bringing awareness to mental health care"
+    />
+    <meta name="keywords" content="nonprofit, charity, memorial, 5k" />
+
+    <!-- Open Graph Tags -->
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Brandon's Community Walk" />
+    <meta property="og:site_name" content="Brandon's Community Walk" />
+    <meta
+      property="og:description"
+      content="Bringing awareness to mental health care"
+    />
+    <meta
+      property="og:image"
+      content="https://dontforgetme.care/shoe-with-heart-edited.png"
+    />
+    <meta property="og:url" content="https://dontforgetme.care" />
+
+    <!-- Twitter Tags -->
+    <meta
+      name="twitter:image"
+      content="https://dontforgetme.care/shoe-with-heart-edited.png"
+    />
+    <meta name="twitter:title" content="Brandon's Community Walk" />
+    <meta
+      name="twitter:description"
+      content="Bringing awareness to mental health care"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="stylesheet" href="assets/sass/main.css" />
   </head>
   <body class="is-preload">
@@ -32,7 +63,7 @@
             </li>
             <li>
               <a
-                href="https://eventbrite.com"
+                href="https://www.eventbrite.com/e/reset-effect-presents-brandons-community-walk-for-mental-health-tickets-885536552667?aff=oddtdtcreator"
                 class="button large icon solid fa-pen-alt"
                 target="_blank"
                 >Register</a
@@ -49,7 +80,7 @@
             </li>
             <li>
               <a
-                href="https://www.signupgenius.com"
+                href="https://www.signupgenius.com/go/10C084DA8A622ABF9C70-49182609-brandons"
                 class="button large icon solid fa-hands-helping"
                 target="_blank"
                 >Volunteer</a
