--- a/sponsorships.html
+++ b/sponsorships.html
@@ -8,8 +8,45 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <!-- General Metadata -->
+    <meta name="title" content="Sponsorships | Brandon's Community Walk" />
+    <meta
+      name="description"
+      content="Bringing awareness to mental health care"
+    />
+    <meta name="keywords" content="nonprofit, charity, memorial, 5k" />
+
+    <!-- Open Graph Tags -->
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:title"
+      content="Sponsorships | Brandon's Community Walk"
+    />
+    <meta property="og:site_name" content="Brandon's Community Walk" />
+    <meta
+      property="og:description"
+      content="Bringing awareness to mental health care"
+    />
+    <meta
+      property="og:image"
+      content="https://dontforgetme.care/shoe-with-heart-edited.png"
+    />
+    <meta property="og:url" content="https://dontforgetme.care" />
+
+    <!-- Twitter Tags -->
+    <meta
+      name="twitter:image"
+      content="https://dontforgetme.care/shoe-with-heart-edited.png"
+    />
+    <meta
+      name="twitter:title"
+      content="Sponsorships | Brandon's Community Walk"
+    />
+    <meta
+      name="twitter:description"
+      content="Bringing awareness to mental health care"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="stylesheet" href="assets/sass/main.css" />
   </head>
   <body class="is-preload">
