add donation utils

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
           <ul class="actions">
             <li>
               <a
-                href="/sponsorships"
+                href="/support"
                 class="button large icon solid fa-hand-holding-heart"
-                >Sponsor</a
+                >Support Us</a
               >
             </li>
             <li>
@@ -149,13 +149,19 @@
             <strong>Registration: </strong> 12-2pm<br />
             <strong>Walk: </strong>2-4pm
           </p>
-          <a
-            href="#"
-            class="button primary large"
-            style="color: #ffffff !important"
-            target="_blank"
-            >Register Now</a
-          >
+          <div class="cta-buttons">
+            <a
+              href="https://www.eventbrite.com/e/reset-effect-presents-brandons-community-walk-for-mental-health-tickets-885536552667?aff=oddtdtcreator"
+              class="button primary icon large solid fa-pen-alt"
+              target="_blank"
+              >Register Now</a
+            >
+            <a
+              href="/support"
+              class="button primary icon large solid fa-hand-holding-heart"
+              >Support Us</a
+            >
+          </div>
         </div>
       </section>
 
