--- a/support.html
+++ b/support.html
@@ -16,7 +16,7 @@
       gtag("config", "G-CPTE6DXMG8");
     </script>
 
-    <title>Sponsorships | Brandon's Community Walk</title>
+    <title>Support Us | Brandon's Community Walk</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta charset="utf-8" />
     <meta
@@ -24,7 +24,7 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <!-- General Metadata -->
-    <meta name="title" content="Sponsorships | Brandon's Community Walk" />
+    <meta name="title" content="Support Us | Brandon's Community Walk" />
     <meta
       name="description"
       content="Bringing awareness to mental health care"
@@ -33,10 +33,7 @@
 
     <!-- Open Graph Tags -->
     <meta property="og:type" content="article" />
-    <meta
-      property="og:title"
-      content="Sponsorships | Brandon's Community Walk"
-    />
+    <meta property="og:title" content="Support Us | Brandon's Community Walk" />
     <meta property="og:site_name" content="Brandon's Community Walk" />
     <meta
       property="og:description"
@@ -70,14 +67,23 @@
       <!-- Intro -->
       <section class="intro">
         <header>
-          <h1>Sponsorships</h1>
+          <h1>Support</h1>
           <p style="font-weight: bold">
             Help us spread mental health awareness
           </p>
           <ul class="actions">
             <li>
-              <a href="#first" class="arrow scrolly"
-                ><span class="label">Next</span></a
+              <a
+                href="#donate"
+                class="button large icon solid fa-hand-holding-usd scrolly"
+                >Donate</a
+              >
+            </li>
+            <li>
+              <a
+                href="#first"
+                class="button large icon solid fa-hand-holding-heart scrolly"
+                >Sponsor</a
               >
             </li>
           </ul>
@@ -86,6 +92,90 @@
           <span class="image fill" data-position="center"
             ><img src="images/cat-unicorn.jpg" alt=""
           /></span>
+        </div>
+      </section>
+
+      <section id="donate">
+        <header>
+          <h2>Donations</h2>
+        </header>
+        <div class="content">
+          <p>
+            <strong>Want to support the walk but can't make it?</strong> Maybe
+            you just want to donate to mental health awareness. Use the links
+            below to donate directly. 85% of your donation goes to
+            <a href="https://resetmichigan.com/" target="_blank"
+              >Reset Effect</a
+            >
+            and the remaining 15% goes to
+            <a href="https://twloha.com/" target="_blank"
+              >To Write Love On Her Arms</a
+            >.
+          </p>
+          <p>
+            To make sure your donation goes to Brandon's Community Walk, use the
+            hashtag <strong>#dontforgetme</strong> in the notes/comments of your
+            payment.
+          </p>
+          <div class="cta-buttons">
+            <a
+              href="https://venmo.com/code?user_id=3606159911028182324&created=1680881665.892004&printed=1"
+              class="button primary icon large solid donate-button"
+              target="_blank"
+              ><svg
+                width="20px"
+                height="20px"
+                viewBox="0 0 48 48"
+                id="Layer_2"
+                data-name="Layer 2"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <defs>
+                  <style>
+                    .cls-1 {
+                      fill: #ffffff;
+                      stroke: #ffffff;
+                      stroke-linecap: round;
+                      stroke-linejoin: round;
+                    }
+                  </style>
+                </defs>
+                <path
+                  class="cls-1"
+                  d="M40.25,4.45a14.26,14.26,0,0,1,2.06,7.8c0,9.72-8.3,22.34-15,31.2H11.91L5.74,6.58,19.21,5.3l3.27,26.24c3.05-5,6.81-12.76,6.81-18.08A14.51,14.51,0,0,0,28,6.94Z"
+                />
+              </svg>
+              <span>Venmo</span></a
+            >
+            <a
+              href="https://cash.app/$ResetEffectHolland"
+              class="button primary icon large solid donate-button"
+              target="_blank"
+              ><svg
+                width="20px"
+                height="20px"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 32 32"
+                id="cashapp"
+              >
+                <defs>
+                  <style>
+                    .cls-2 {
+                      fill: #ffffff;
+                      stroke: #ffffff;
+                      stroke-linecap: round;
+                      stroke-linejoin: round;
+                    }
+                  </style>
+                </defs>
+                <path
+                  class="cls-2"
+                  d="M16.408 11.087c1.249-.314 3.757.907 5.043 1.75a1 1 0 0 0 1.256-.129l2-2a1 1 0 0 0 .182-1.166c-.919-1.779-2.556-2.718-3.627-3.165l.687-2.06A1 1 0 0 0 21 3h-4a.997.997 0 0 0-.948.684l-.75 2.25c-2.132-.035-5.235.892-6.269 4.812-.436 1.653-.253 3.153.542 4.46 1.515 2.489 4.845 3.466 6.207 3.771 1.307.292 1.915 1.127 1.874 1.493-.022.204-.492.53-1.656.53-3.491 0-5.227-1.643-5.293-1.707a.999.999 0 0 0-1.414 0l-2 2a.999.999 0 0 0-.241 1.023c.813 2.438 3.116 3.262 4.608 3.542l-.608 1.826A1 1 0 0 0 12 29h4a.997.997 0 0 0 .948-.684l.78-2.34c2.31-.156 4.186-1.058 5.334-2.58 1.161-1.54 1.489-3.607.899-5.671-.758-2.651-3.965-3.749-5.882-4.404-.273-.093-.52-.177-.725-.255-1.213-.461-1.515-.859-1.587-1.055-.021-.055-.073-.2.107-.527a.766.766 0 0 1 .534-.397zm-2.517 1.612c.455 1.238 1.79 1.869 2.754 2.235.224.085.491.177.788.278 1.547.53 4.136 1.416 4.605 3.062.416 1.455.207 2.883-.572 3.917C20.573 23.375 19.029 24 17 24a.997.997 0 0 0-.948.684L15.279 27h-1.892l.561-1.684A1 1 0 0 0 13 24c-.03 0-2.758-.022-3.806-1.78l.89-.89C11.096 22.01 13.072 23 16 23c3.145 0 3.585-1.77 3.645-2.312.178-1.613-1.295-3.188-3.427-3.665-.867-.194-3.787-.974-4.934-2.858-.509-.836-.613-1.789-.317-2.911.999-3.792 4.473-3.333 4.861-3.27.482.085.964-.199 1.12-.668L17.721 5h1.892l-.561 1.684a1.003 1.003 0 0 0 .72 1.29c.021.005 1.854.458 2.956 1.884l-.878.878c-1.281-.739-3.964-2.08-5.922-1.591a2.765 2.765 0 0 0-1.804 1.372c-.513.931-.41 1.7-.233 2.182z"
+                ></path>
+              </svg>
+              <span>Cash App</span></a
+            >
+          </div>
         </div>
       </section>
 
@@ -108,7 +198,15 @@
             Your sponsorship of our mental health awareness event will help
             educate the public, leading to early intervention and reducing the
             long-term impacts of mental disorders. This is an opportunity to
-            make a profound difference in countless lives.
+            make a profound difference in countless lives. 85% of your
+            sponsorship goes to
+            <a href="https://resetmichigan.com/" target="_blank"
+              >Reset Effect</a
+            >
+            and the remaining 15% goes to
+            <a href="https://twloha.com/" target="_blank"
+              >To Write Love On Her Arms</a
+            >.
           </p>
           <ul class="feature-icons mb-0">
             <li class="icon solid fa-ribbon">
