--- a/test.html
+++ b/test.html
@@ -287,7 +287,7 @@
                   type="submit"
                   value="Send Message"
                   class="button primary g-recaptcha"
-                  data-sitekey="your_site_key"
+                  data-sitekey="6LfzwsMpAAAAAMBgPnhufDKTOFaJoPVvhG9wd4sr"
                   data-callback="onSubmit"
                 />
               </li>
